# synology-lun-recovery

./: .gitignore  README.md  config.toml.example  pyproject.toml
src/synology_recovery/: __init__.py  api.py  cli.py  config.py  iscsi.py  snapshot.py
