[project]
name = "synology-recovery"
version = "0.1.0"
description = "Tool to safely revert Synology NAS iSCSI shares to snapshots"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "tomli>=2.0.1",
    "rich>=13.7.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
synology-recovery = "synology_recovery.cli:main"
